# kenwood-th-d74

./: MEMORY_LAYOUT.md  PROTOCOL.md  README.md  TEARDOWN.md  firmware.py  fldm.py  main.py  pyproject.toml  thd74_updater.py  update_bad.py  update_exe.py  update_flat.py  update_jump.py  updater.py  utils.py
bootloader/: Makefile
firmware/: Makefile  header.S  l138-ddr.ld  main.c  rom_functions.S  rom_functions.h
firmware/buttons/: Makefile  main.c
firmware/hello-world/: Makefile  header.S  header.c  l138-ddr.ld  linker_const.h  main.c  rom_functions.S  rom_functions.h  rom_helpers.h  startup.S  vectors.S
firmware/jump-fldm-loader/: Makefile  header.S  startup.S
firmware/lib/: bootloader.h  build.mk  l138-ddr.ld  rom_functions.S  rom_functions.h  rom_helpers.c  rom_helpers.h  startup.S
firmware/rust/: Makefile  README.md  main.rs
firmware/serial/: Makefile
