[project]
name = "openwood"
version = "0.1.0"
description = "Openwood firmware update tool for Kenwood TH-D74 radio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
openwood = "updater:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["updater"]
