[project]
name = "openwood"
version = "0.1.0"
description = "Openwood firmware update tool for Kenwood TH-D74 radio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pyserial>=3.5",
    "thd75-fw",
    # Bleeding-edge / reproducible git pin (uncomment one active dep only):
    # "thd75-fw @ git+https://github.com/swiftraccoon/thd75-fw.git@9ad7fa58170577a98b92debb1c5ad361940abf6c",
    # Local sibling checkout (relative to openwood/pyproject.toml):
    # "thd75-fw @ ../swiftraccoon-thd75-fw",
]

[project.scripts]
openwood = "updater:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["firmware", "fldm", "updater", "update_bad", "update_exe", "utils"]
